updated the travis with export command1

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
         - git config --local user.email "travis@example.com"
         - git tag -f $RELEASE_TAG
       deploy: &github
+        edge: true
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
         file:
@@ -111,6 +112,7 @@ jobs:
         - cp manifest-allocations.yml manifest.yml
         - echo "Deploying allocations server $RELEASE_TAG"
       deploy: &cloudfoundry
+        edge: true
         provider: cloudfoundry
         api: $CF_API_URL
         username: $CF_USERNAME
