Upadated all the yml file of 4  different services

--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -2,10 +2,9 @@ applications:
 - name: tracker-registration
   path: ./applications/registration-server/build/libs/registration-server.jar
   routes:
-  - route: registration-pal-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+  - route: registration-pal-ashokamit.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
-    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-registration-database
