--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -2,11 +2,10 @@ applications:
 - name: tracker-timesheets
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
-  - route: timesheets-pal-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+  - route: timesheets-pal-ashokamit.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
-    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-ashokamit.apps.evans.pal.pivotal.io
   services:
   - tracker-timesheets-database
