updated code for eureka

--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -9,3 +9,4 @@ applications:
     REGISTRATION_SERVER_ENDPOINT: http://registration-pal-ashokamit.apps.evans.pal.pivotal.io
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
