--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -9,3 +9,4 @@ applications:
     REGISTRATION_SERVER_ENDPOINT: http://registration-pal-ashokamit.apps.evans.pal.pivotal.io
   services:
   - tracker-backlog-database
+  - tracker-service-registry
